# webserv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
configs/: tests.conf
src/HTTP/: HTTPResponse.cpp  HTTPResponse.hpp
src/IO/: IOManager.cpp  IOManager.hpp
src/IO/IOTask/ReadTask/: CGIReadTask.cpp  ClientSocketReadTask.cpp  FileReadTask.cpp
src/IO/IOTask/WriteTask/: CGIWriteTask.cpp  ClientSocketWriteTask.cpp  FileWriteTask.cpp
src/Parser/ConfigParser/: ConfigParser.cpp
src/Parser/MultipartFormParser/: MultipartFormParser.cpp
src/RequestHandler/: AutoIndexResponse.cpp  BuiltinCGIUpload.cpp  HeaderProcessFunctions.cpp  RequestHandler.cpp
src/RequestHandler/Resource/: CGIResource.cpp  NoSuchFileResource.cpp  Resource.cpp  StaticFileResource.cpp
src/Socket/: MasterSocket.cpp
src/Utils/: FileDescriptor.cpp  FileDescriptor.hpp  Logger.hpp
tests/: CMakeLists.txt  FixitureBase.hpp  webserv-tests.cpp
tests/cgiConfig/: nginx.conf  testCases.cpp  webserv.conf
tests/cgiConfig/server/: cgi_tester.py  no_response.py
tests/config1/: nginx.conf  testCases.cpp  webserv.conf
